# serializer version: 1
# name: test_get_prices_for_date[both]
  dict({
    'es': list([
      dict({
        'end': '2025-10-15T00:15:00+02:00',
        'price': 34150000.0,
        'start': '2025-10-15T00:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T00:30:00+02:00',
        'price': 34150015.0,
        'start': '2025-10-15T00:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T00:45:00+02:00',
        'price': 34150030.0,
        'start': '2025-10-15T00:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T01:00:00+02:00',
        'price': 34150045.0,
        'start': '2025-10-15T00:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T01:15:00+02:00',
        'price': 34150100.0,
        'start': '2025-10-15T01:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T01:30:00+02:00',
        'price': 34150115.0,
        'start': '2025-10-15T01:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T01:45:00+02:00',
        'price': 34150130.0,
        'start': '2025-10-15T01:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T02:00:00+02:00',
        'price': 34150145.0,
        'start': '2025-10-15T01:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T02:15:00+02:00',
        'price': 34150200.0,
        'start': '2025-10-15T02:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T02:30:00+02:00',
        'price': 34150215.0,
        'start': '2025-10-15T02:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T02:45:00+02:00',
        'price': 34150230.0,
        'start': '2025-10-15T02:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T03:00:00+02:00',
        'price': 34150245.0,
        'start': '2025-10-15T02:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T03:15:00+02:00',
        'price': 34150300.0,
        'start': '2025-10-15T03:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T03:30:00+02:00',
        'price': 34150315.0,
        'start': '2025-10-15T03:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T03:45:00+02:00',
        'price': 34150330.0,
        'start': '2025-10-15T03:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T04:00:00+02:00',
        'price': 34150345.0,
        'start': '2025-10-15T03:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T04:15:00+02:00',
        'price': 34150400.0,
        'start': '2025-10-15T04:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T04:30:00+02:00',
        'price': 34150415.0,
        'start': '2025-10-15T04:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T04:45:00+02:00',
        'price': 34150430.0,
        'start': '2025-10-15T04:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T05:00:00+02:00',
        'price': 34150445.0,
        'start': '2025-10-15T04:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T05:15:00+02:00',
        'price': 34150500.0,
        'start': '2025-10-15T05:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T05:30:00+02:00',
        'price': 34150515.0,
        'start': '2025-10-15T05:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T05:45:00+02:00',
        'price': 34150530.0,
        'start': '2025-10-15T05:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T06:00:00+02:00',
        'price': 34150545.0,
        'start': '2025-10-15T05:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T06:15:00+02:00',
        'price': 34150600.0,
        'start': '2025-10-15T06:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T06:30:00+02:00',
        'price': 34150615.0,
        'start': '2025-10-15T06:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T06:45:00+02:00',
        'price': 34150630.0,
        'start': '2025-10-15T06:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T07:00:00+02:00',
        'price': 34150645.0,
        'start': '2025-10-15T06:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T07:15:00+02:00',
        'price': 34150700.0,
        'start': '2025-10-15T07:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T07:30:00+02:00',
        'price': 34150715.0,
        'start': '2025-10-15T07:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T07:45:00+02:00',
        'price': 34150730.0,
        'start': '2025-10-15T07:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T08:00:00+02:00',
        'price': 34150745.0,
        'start': '2025-10-15T07:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T08:15:00+02:00',
        'price': 34150800.0,
        'start': '2025-10-15T08:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T08:30:00+02:00',
        'price': 34150815.0,
        'start': '2025-10-15T08:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T08:45:00+02:00',
        'price': 34150830.0,
        'start': '2025-10-15T08:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T09:00:00+02:00',
        'price': 34150845.0,
        'start': '2025-10-15T08:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T09:15:00+02:00',
        'price': 34150900.0,
        'start': '2025-10-15T09:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T09:30:00+02:00',
        'price': 34150915.0,
        'start': '2025-10-15T09:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T09:45:00+02:00',
        'price': 34150930.0,
        'start': '2025-10-15T09:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T10:00:00+02:00',
        'price': 34150945.0,
        'start': '2025-10-15T09:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T10:15:00+02:00',
        'price': 34151000.0,
        'start': '2025-10-15T10:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T10:30:00+02:00',
        'price': 34151015.0,
        'start': '2025-10-15T10:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T10:45:00+02:00',
        'price': 34151030.0,
        'start': '2025-10-15T10:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T11:00:00+02:00',
        'price': 34151045.0,
        'start': '2025-10-15T10:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T11:15:00+02:00',
        'price': 34151100.0,
        'start': '2025-10-15T11:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T11:30:00+02:00',
        'price': 34151115.0,
        'start': '2025-10-15T11:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T11:45:00+02:00',
        'price': 34151130.0,
        'start': '2025-10-15T11:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T12:00:00+02:00',
        'price': 34151145.0,
        'start': '2025-10-15T11:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T12:15:00+02:00',
        'price': 34151200.0,
        'start': '2025-10-15T12:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T12:30:00+02:00',
        'price': 34151215.0,
        'start': '2025-10-15T12:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T12:45:00+02:00',
        'price': 34151230.0,
        'start': '2025-10-15T12:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T13:00:00+02:00',
        'price': 34151245.0,
        'start': '2025-10-15T12:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T13:15:00+02:00',
        'price': 34151300.0,
        'start': '2025-10-15T13:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T13:30:00+02:00',
        'price': 34151315.0,
        'start': '2025-10-15T13:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T13:45:00+02:00',
        'price': 34151330.0,
        'start': '2025-10-15T13:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T14:00:00+02:00',
        'price': 34151345.0,
        'start': '2025-10-15T13:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T14:15:00+02:00',
        'price': 34151400.0,
        'start': '2025-10-15T14:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T14:30:00+02:00',
        'price': 34151415.0,
        'start': '2025-10-15T14:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T14:45:00+02:00',
        'price': 34151430.0,
        'start': '2025-10-15T14:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T15:00:00+02:00',
        'price': 34151445.0,
        'start': '2025-10-15T14:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T15:15:00+02:00',
        'price': 34151500.0,
        'start': '2025-10-15T15:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T15:30:00+02:00',
        'price': 34151515.0,
        'start': '2025-10-15T15:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T15:45:00+02:00',
        'price': 34151530.0,
        'start': '2025-10-15T15:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T16:00:00+02:00',
        'price': 34151545.0,
        'start': '2025-10-15T15:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T16:15:00+02:00',
        'price': 34151600.0,
        'start': '2025-10-15T16:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T16:30:00+02:00',
        'price': 34151615.0,
        'start': '2025-10-15T16:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T16:45:00+02:00',
        'price': 34151630.0,
        'start': '2025-10-15T16:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T17:00:00+02:00',
        'price': 34151645.0,
        'start': '2025-10-15T16:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T17:15:00+02:00',
        'price': 34151700.0,
        'start': '2025-10-15T17:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T17:30:00+02:00',
        'price': 34151715.0,
        'start': '2025-10-15T17:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T17:45:00+02:00',
        'price': 34151730.0,
        'start': '2025-10-15T17:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T18:00:00+02:00',
        'price': 34151745.0,
        'start': '2025-10-15T17:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T18:15:00+02:00',
        'price': 34151800.0,
        'start': '2025-10-15T18:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T18:30:00+02:00',
        'price': 34151815.0,
        'start': '2025-10-15T18:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T18:45:00+02:00',
        'price': 34151830.0,
        'start': '2025-10-15T18:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T19:00:00+02:00',
        'price': 34151845.0,
        'start': '2025-10-15T18:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T19:15:00+02:00',
        'price': 34151900.0,
        'start': '2025-10-15T19:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T19:30:00+02:00',
        'price': 34151915.0,
        'start': '2025-10-15T19:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T19:45:00+02:00',
        'price': 34151930.0,
        'start': '2025-10-15T19:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T20:00:00+02:00',
        'price': 34151945.0,
        'start': '2025-10-15T19:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T20:15:00+02:00',
        'price': 34152000.0,
        'start': '2025-10-15T20:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T20:30:00+02:00',
        'price': 34152015.0,
        'start': '2025-10-15T20:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T20:45:00+02:00',
        'price': 34152030.0,
        'start': '2025-10-15T20:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T21:00:00+02:00',
        'price': 34152045.0,
        'start': '2025-10-15T20:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T21:15:00+02:00',
        'price': 34152100.0,
        'start': '2025-10-15T21:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T21:30:00+02:00',
        'price': 34152115.0,
        'start': '2025-10-15T21:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T21:45:00+02:00',
        'price': 34152130.0,
        'start': '2025-10-15T21:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T22:00:00+02:00',
        'price': 34152145.0,
        'start': '2025-10-15T21:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T22:15:00+02:00',
        'price': 34152200.0,
        'start': '2025-10-15T22:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T22:30:00+02:00',
        'price': 34152215.0,
        'start': '2025-10-15T22:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T22:45:00+02:00',
        'price': 34152230.0,
        'start': '2025-10-15T22:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T23:00:00+02:00',
        'price': 34152245.0,
        'start': '2025-10-15T22:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T23:15:00+02:00',
        'price': 34152300.0,
        'start': '2025-10-15T23:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T23:30:00+02:00',
        'price': 34152315.0,
        'start': '2025-10-15T23:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T23:45:00+02:00',
        'price': 34152330.0,
        'start': '2025-10-15T23:30:00+02:00',
      }),
      dict({
        'end': '2025-10-16T00:00:00+02:00',
        'price': 34152345.0,
        'start': '2025-10-15T23:45:00+02:00',
      }),
    ]),
    'pt': list([
      dict({
        'end': '2025-10-15T00:15:00+02:00',
        'price': 351150000.0,
        'start': '2025-10-15T00:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T00:30:00+02:00',
        'price': 351150015.0,
        'start': '2025-10-15T00:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T00:45:00+02:00',
        'price': 351150030.0,
        'start': '2025-10-15T00:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T01:00:00+02:00',
        'price': 351150045.0,
        'start': '2025-10-15T00:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T01:15:00+02:00',
        'price': 351150100.0,
        'start': '2025-10-15T01:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T01:30:00+02:00',
        'price': 351150115.0,
        'start': '2025-10-15T01:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T01:45:00+02:00',
        'price': 351150130.0,
        'start': '2025-10-15T01:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T02:00:00+02:00',
        'price': 351150145.0,
        'start': '2025-10-15T01:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T02:15:00+02:00',
        'price': 351150200.0,
        'start': '2025-10-15T02:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T02:30:00+02:00',
        'price': 351150215.0,
        'start': '2025-10-15T02:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T02:45:00+02:00',
        'price': 351150230.0,
        'start': '2025-10-15T02:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T03:00:00+02:00',
        'price': 351150245.0,
        'start': '2025-10-15T02:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T03:15:00+02:00',
        'price': 351150300.0,
        'start': '2025-10-15T03:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T03:30:00+02:00',
        'price': 351150315.0,
        'start': '2025-10-15T03:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T03:45:00+02:00',
        'price': 351150330.0,
        'start': '2025-10-15T03:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T04:00:00+02:00',
        'price': 351150345.0,
        'start': '2025-10-15T03:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T04:15:00+02:00',
        'price': 351150400.0,
        'start': '2025-10-15T04:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T04:30:00+02:00',
        'price': 351150415.0,
        'start': '2025-10-15T04:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T04:45:00+02:00',
        'price': 351150430.0,
        'start': '2025-10-15T04:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T05:00:00+02:00',
        'price': 351150445.0,
        'start': '2025-10-15T04:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T05:15:00+02:00',
        'price': 351150500.0,
        'start': '2025-10-15T05:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T05:30:00+02:00',
        'price': 351150515.0,
        'start': '2025-10-15T05:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T05:45:00+02:00',
        'price': 351150530.0,
        'start': '2025-10-15T05:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T06:00:00+02:00',
        'price': 351150545.0,
        'start': '2025-10-15T05:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T06:15:00+02:00',
        'price': 351150600.0,
        'start': '2025-10-15T06:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T06:30:00+02:00',
        'price': 351150615.0,
        'start': '2025-10-15T06:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T06:45:00+02:00',
        'price': 351150630.0,
        'start': '2025-10-15T06:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T07:00:00+02:00',
        'price': 351150645.0,
        'start': '2025-10-15T06:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T07:15:00+02:00',
        'price': 351150700.0,
        'start': '2025-10-15T07:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T07:30:00+02:00',
        'price': 351150715.0,
        'start': '2025-10-15T07:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T07:45:00+02:00',
        'price': 351150730.0,
        'start': '2025-10-15T07:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T08:00:00+02:00',
        'price': 351150745.0,
        'start': '2025-10-15T07:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T08:15:00+02:00',
        'price': 351150800.0,
        'start': '2025-10-15T08:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T08:30:00+02:00',
        'price': 351150815.0,
        'start': '2025-10-15T08:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T08:45:00+02:00',
        'price': 351150830.0,
        'start': '2025-10-15T08:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T09:00:00+02:00',
        'price': 351150845.0,
        'start': '2025-10-15T08:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T09:15:00+02:00',
        'price': 351150900.0,
        'start': '2025-10-15T09:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T09:30:00+02:00',
        'price': 351150915.0,
        'start': '2025-10-15T09:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T09:45:00+02:00',
        'price': 351150930.0,
        'start': '2025-10-15T09:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T10:00:00+02:00',
        'price': 351150945.0,
        'start': '2025-10-15T09:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T10:15:00+02:00',
        'price': 351151000.0,
        'start': '2025-10-15T10:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T10:30:00+02:00',
        'price': 351151015.0,
        'start': '2025-10-15T10:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T10:45:00+02:00',
        'price': 351151030.0,
        'start': '2025-10-15T10:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T11:00:00+02:00',
        'price': 351151045.0,
        'start': '2025-10-15T10:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T11:15:00+02:00',
        'price': 351151100.0,
        'start': '2025-10-15T11:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T11:30:00+02:00',
        'price': 351151115.0,
        'start': '2025-10-15T11:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T11:45:00+02:00',
        'price': 351151130.0,
        'start': '2025-10-15T11:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T12:00:00+02:00',
        'price': 351151145.0,
        'start': '2025-10-15T11:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T12:15:00+02:00',
        'price': 351151200.0,
        'start': '2025-10-15T12:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T12:30:00+02:00',
        'price': 351151215.0,
        'start': '2025-10-15T12:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T12:45:00+02:00',
        'price': 351151230.0,
        'start': '2025-10-15T12:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T13:00:00+02:00',
        'price': 351151245.0,
        'start': '2025-10-15T12:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T13:15:00+02:00',
        'price': 351151300.0,
        'start': '2025-10-15T13:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T13:30:00+02:00',
        'price': 351151315.0,
        'start': '2025-10-15T13:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T13:45:00+02:00',
        'price': 351151330.0,
        'start': '2025-10-15T13:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T14:00:00+02:00',
        'price': 351151345.0,
        'start': '2025-10-15T13:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T14:15:00+02:00',
        'price': 351151400.0,
        'start': '2025-10-15T14:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T14:30:00+02:00',
        'price': 351151415.0,
        'start': '2025-10-15T14:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T14:45:00+02:00',
        'price': 351151430.0,
        'start': '2025-10-15T14:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T15:00:00+02:00',
        'price': 351151445.0,
        'start': '2025-10-15T14:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T15:15:00+02:00',
        'price': 351151500.0,
        'start': '2025-10-15T15:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T15:30:00+02:00',
        'price': 351151515.0,
        'start': '2025-10-15T15:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T15:45:00+02:00',
        'price': 351151530.0,
        'start': '2025-10-15T15:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T16:00:00+02:00',
        'price': 351151545.0,
        'start': '2025-10-15T15:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T16:15:00+02:00',
        'price': 351151600.0,
        'start': '2025-10-15T16:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T16:30:00+02:00',
        'price': 351151615.0,
        'start': '2025-10-15T16:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T16:45:00+02:00',
        'price': 351151630.0,
        'start': '2025-10-15T16:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T17:00:00+02:00',
        'price': 351151645.0,
        'start': '2025-10-15T16:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T17:15:00+02:00',
        'price': 351151700.0,
        'start': '2025-10-15T17:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T17:30:00+02:00',
        'price': 351151715.0,
        'start': '2025-10-15T17:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T17:45:00+02:00',
        'price': 351151730.0,
        'start': '2025-10-15T17:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T18:00:00+02:00',
        'price': 351151745.0,
        'start': '2025-10-15T17:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T18:15:00+02:00',
        'price': 351151800.0,
        'start': '2025-10-15T18:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T18:30:00+02:00',
        'price': 351151815.0,
        'start': '2025-10-15T18:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T18:45:00+02:00',
        'price': 351151830.0,
        'start': '2025-10-15T18:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T19:00:00+02:00',
        'price': 351151845.0,
        'start': '2025-10-15T18:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T19:15:00+02:00',
        'price': 351151900.0,
        'start': '2025-10-15T19:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T19:30:00+02:00',
        'price': 351151915.0,
        'start': '2025-10-15T19:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T19:45:00+02:00',
        'price': 351151930.0,
        'start': '2025-10-15T19:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T20:00:00+02:00',
        'price': 351151945.0,
        'start': '2025-10-15T19:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T20:15:00+02:00',
        'price': 351152000.0,
        'start': '2025-10-15T20:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T20:30:00+02:00',
        'price': 351152015.0,
        'start': '2025-10-15T20:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T20:45:00+02:00',
        'price': 351152030.0,
        'start': '2025-10-15T20:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T21:00:00+02:00',
        'price': 351152045.0,
        'start': '2025-10-15T20:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T21:15:00+02:00',
        'price': 351152100.0,
        'start': '2025-10-15T21:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T21:30:00+02:00',
        'price': 351152115.0,
        'start': '2025-10-15T21:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T21:45:00+02:00',
        'price': 351152130.0,
        'start': '2025-10-15T21:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T22:00:00+02:00',
        'price': 351152145.0,
        'start': '2025-10-15T21:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T22:15:00+02:00',
        'price': 351152200.0,
        'start': '2025-10-15T22:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T22:30:00+02:00',
        'price': 351152215.0,
        'start': '2025-10-15T22:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T22:45:00+02:00',
        'price': 351152230.0,
        'start': '2025-10-15T22:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T23:00:00+02:00',
        'price': 351152245.0,
        'start': '2025-10-15T22:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T23:15:00+02:00',
        'price': 351152300.0,
        'start': '2025-10-15T23:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T23:30:00+02:00',
        'price': 351152315.0,
        'start': '2025-10-15T23:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T23:45:00+02:00',
        'price': 351152330.0,
        'start': '2025-10-15T23:30:00+02:00',
      }),
      dict({
        'end': '2025-10-16T00:00:00+02:00',
        'price': 351152345.0,
        'start': '2025-10-15T23:45:00+02:00',
      }),
    ]),
  })
# ---
# name: test_get_prices_for_date[portugal]
  dict({
    'pt': list([
      dict({
        'end': '2025-10-15T00:15:00+02:00',
        'price': 351150000.0,
        'start': '2025-10-15T00:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T00:30:00+02:00',
        'price': 351150015.0,
        'start': '2025-10-15T00:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T00:45:00+02:00',
        'price': 351150030.0,
        'start': '2025-10-15T00:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T01:00:00+02:00',
        'price': 351150045.0,
        'start': '2025-10-15T00:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T01:15:00+02:00',
        'price': 351150100.0,
        'start': '2025-10-15T01:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T01:30:00+02:00',
        'price': 351150115.0,
        'start': '2025-10-15T01:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T01:45:00+02:00',
        'price': 351150130.0,
        'start': '2025-10-15T01:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T02:00:00+02:00',
        'price': 351150145.0,
        'start': '2025-10-15T01:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T02:15:00+02:00',
        'price': 351150200.0,
        'start': '2025-10-15T02:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T02:30:00+02:00',
        'price': 351150215.0,
        'start': '2025-10-15T02:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T02:45:00+02:00',
        'price': 351150230.0,
        'start': '2025-10-15T02:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T03:00:00+02:00',
        'price': 351150245.0,
        'start': '2025-10-15T02:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T03:15:00+02:00',
        'price': 351150300.0,
        'start': '2025-10-15T03:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T03:30:00+02:00',
        'price': 351150315.0,
        'start': '2025-10-15T03:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T03:45:00+02:00',
        'price': 351150330.0,
        'start': '2025-10-15T03:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T04:00:00+02:00',
        'price': 351150345.0,
        'start': '2025-10-15T03:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T04:15:00+02:00',
        'price': 351150400.0,
        'start': '2025-10-15T04:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T04:30:00+02:00',
        'price': 351150415.0,
        'start': '2025-10-15T04:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T04:45:00+02:00',
        'price': 351150430.0,
        'start': '2025-10-15T04:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T05:00:00+02:00',
        'price': 351150445.0,
        'start': '2025-10-15T04:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T05:15:00+02:00',
        'price': 351150500.0,
        'start': '2025-10-15T05:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T05:30:00+02:00',
        'price': 351150515.0,
        'start': '2025-10-15T05:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T05:45:00+02:00',
        'price': 351150530.0,
        'start': '2025-10-15T05:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T06:00:00+02:00',
        'price': 351150545.0,
        'start': '2025-10-15T05:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T06:15:00+02:00',
        'price': 351150600.0,
        'start': '2025-10-15T06:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T06:30:00+02:00',
        'price': 351150615.0,
        'start': '2025-10-15T06:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T06:45:00+02:00',
        'price': 351150630.0,
        'start': '2025-10-15T06:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T07:00:00+02:00',
        'price': 351150645.0,
        'start': '2025-10-15T06:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T07:15:00+02:00',
        'price': 351150700.0,
        'start': '2025-10-15T07:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T07:30:00+02:00',
        'price': 351150715.0,
        'start': '2025-10-15T07:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T07:45:00+02:00',
        'price': 351150730.0,
        'start': '2025-10-15T07:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T08:00:00+02:00',
        'price': 351150745.0,
        'start': '2025-10-15T07:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T08:15:00+02:00',
        'price': 351150800.0,
        'start': '2025-10-15T08:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T08:30:00+02:00',
        'price': 351150815.0,
        'start': '2025-10-15T08:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T08:45:00+02:00',
        'price': 351150830.0,
        'start': '2025-10-15T08:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T09:00:00+02:00',
        'price': 351150845.0,
        'start': '2025-10-15T08:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T09:15:00+02:00',
        'price': 351150900.0,
        'start': '2025-10-15T09:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T09:30:00+02:00',
        'price': 351150915.0,
        'start': '2025-10-15T09:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T09:45:00+02:00',
        'price': 351150930.0,
        'start': '2025-10-15T09:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T10:00:00+02:00',
        'price': 351150945.0,
        'start': '2025-10-15T09:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T10:15:00+02:00',
        'price': 351151000.0,
        'start': '2025-10-15T10:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T10:30:00+02:00',
        'price': 351151015.0,
        'start': '2025-10-15T10:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T10:45:00+02:00',
        'price': 351151030.0,
        'start': '2025-10-15T10:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T11:00:00+02:00',
        'price': 351151045.0,
        'start': '2025-10-15T10:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T11:15:00+02:00',
        'price': 351151100.0,
        'start': '2025-10-15T11:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T11:30:00+02:00',
        'price': 351151115.0,
        'start': '2025-10-15T11:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T11:45:00+02:00',
        'price': 351151130.0,
        'start': '2025-10-15T11:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T12:00:00+02:00',
        'price': 351151145.0,
        'start': '2025-10-15T11:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T12:15:00+02:00',
        'price': 351151200.0,
        'start': '2025-10-15T12:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T12:30:00+02:00',
        'price': 351151215.0,
        'start': '2025-10-15T12:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T12:45:00+02:00',
        'price': 351151230.0,
        'start': '2025-10-15T12:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T13:00:00+02:00',
        'price': 351151245.0,
        'start': '2025-10-15T12:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T13:15:00+02:00',
        'price': 351151300.0,
        'start': '2025-10-15T13:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T13:30:00+02:00',
        'price': 351151315.0,
        'start': '2025-10-15T13:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T13:45:00+02:00',
        'price': 351151330.0,
        'start': '2025-10-15T13:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T14:00:00+02:00',
        'price': 351151345.0,
        'start': '2025-10-15T13:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T14:15:00+02:00',
        'price': 351151400.0,
        'start': '2025-10-15T14:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T14:30:00+02:00',
        'price': 351151415.0,
        'start': '2025-10-15T14:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T14:45:00+02:00',
        'price': 351151430.0,
        'start': '2025-10-15T14:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T15:00:00+02:00',
        'price': 351151445.0,
        'start': '2025-10-15T14:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T15:15:00+02:00',
        'price': 351151500.0,
        'start': '2025-10-15T15:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T15:30:00+02:00',
        'price': 351151515.0,
        'start': '2025-10-15T15:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T15:45:00+02:00',
        'price': 351151530.0,
        'start': '2025-10-15T15:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T16:00:00+02:00',
        'price': 351151545.0,
        'start': '2025-10-15T15:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T16:15:00+02:00',
        'price': 351151600.0,
        'start': '2025-10-15T16:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T16:30:00+02:00',
        'price': 351151615.0,
        'start': '2025-10-15T16:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T16:45:00+02:00',
        'price': 351151630.0,
        'start': '2025-10-15T16:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T17:00:00+02:00',
        'price': 351151645.0,
        'start': '2025-10-15T16:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T17:15:00+02:00',
        'price': 351151700.0,
        'start': '2025-10-15T17:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T17:30:00+02:00',
        'price': 351151715.0,
        'start': '2025-10-15T17:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T17:45:00+02:00',
        'price': 351151730.0,
        'start': '2025-10-15T17:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T18:00:00+02:00',
        'price': 351151745.0,
        'start': '2025-10-15T17:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T18:15:00+02:00',
        'price': 351151800.0,
        'start': '2025-10-15T18:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T18:30:00+02:00',
        'price': 351151815.0,
        'start': '2025-10-15T18:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T18:45:00+02:00',
        'price': 351151830.0,
        'start': '2025-10-15T18:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T19:00:00+02:00',
        'price': 351151845.0,
        'start': '2025-10-15T18:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T19:15:00+02:00',
        'price': 351151900.0,
        'start': '2025-10-15T19:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T19:30:00+02:00',
        'price': 351151915.0,
        'start': '2025-10-15T19:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T19:45:00+02:00',
        'price': 351151930.0,
        'start': '2025-10-15T19:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T20:00:00+02:00',
        'price': 351151945.0,
        'start': '2025-10-15T19:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T20:15:00+02:00',
        'price': 351152000.0,
        'start': '2025-10-15T20:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T20:30:00+02:00',
        'price': 351152015.0,
        'start': '2025-10-15T20:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T20:45:00+02:00',
        'price': 351152030.0,
        'start': '2025-10-15T20:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T21:00:00+02:00',
        'price': 351152045.0,
        'start': '2025-10-15T20:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T21:15:00+02:00',
        'price': 351152100.0,
        'start': '2025-10-15T21:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T21:30:00+02:00',
        'price': 351152115.0,
        'start': '2025-10-15T21:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T21:45:00+02:00',
        'price': 351152130.0,
        'start': '2025-10-15T21:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T22:00:00+02:00',
        'price': 351152145.0,
        'start': '2025-10-15T21:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T22:15:00+02:00',
        'price': 351152200.0,
        'start': '2025-10-15T22:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T22:30:00+02:00',
        'price': 351152215.0,
        'start': '2025-10-15T22:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T22:45:00+02:00',
        'price': 351152230.0,
        'start': '2025-10-15T22:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T23:00:00+02:00',
        'price': 351152245.0,
        'start': '2025-10-15T22:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T23:15:00+02:00',
        'price': 351152300.0,
        'start': '2025-10-15T23:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T23:30:00+02:00',
        'price': 351152315.0,
        'start': '2025-10-15T23:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T23:45:00+02:00',
        'price': 351152330.0,
        'start': '2025-10-15T23:30:00+02:00',
      }),
      dict({
        'end': '2025-10-16T00:00:00+02:00',
        'price': 351152345.0,
        'start': '2025-10-15T23:45:00+02:00',
      }),
    ]),
  })
# ---
# name: test_get_prices_for_date[spain]
  dict({
    'es': list([
      dict({
        'end': '2025-10-15T00:15:00+02:00',
        'price': 34150000.0,
        'start': '2025-10-15T00:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T00:30:00+02:00',
        'price': 34150015.0,
        'start': '2025-10-15T00:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T00:45:00+02:00',
        'price': 34150030.0,
        'start': '2025-10-15T00:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T01:00:00+02:00',
        'price': 34150045.0,
        'start': '2025-10-15T00:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T01:15:00+02:00',
        'price': 34150100.0,
        'start': '2025-10-15T01:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T01:30:00+02:00',
        'price': 34150115.0,
        'start': '2025-10-15T01:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T01:45:00+02:00',
        'price': 34150130.0,
        'start': '2025-10-15T01:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T02:00:00+02:00',
        'price': 34150145.0,
        'start': '2025-10-15T01:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T02:15:00+02:00',
        'price': 34150200.0,
        'start': '2025-10-15T02:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T02:30:00+02:00',
        'price': 34150215.0,
        'start': '2025-10-15T02:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T02:45:00+02:00',
        'price': 34150230.0,
        'start': '2025-10-15T02:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T03:00:00+02:00',
        'price': 34150245.0,
        'start': '2025-10-15T02:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T03:15:00+02:00',
        'price': 34150300.0,
        'start': '2025-10-15T03:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T03:30:00+02:00',
        'price': 34150315.0,
        'start': '2025-10-15T03:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T03:45:00+02:00',
        'price': 34150330.0,
        'start': '2025-10-15T03:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T04:00:00+02:00',
        'price': 34150345.0,
        'start': '2025-10-15T03:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T04:15:00+02:00',
        'price': 34150400.0,
        'start': '2025-10-15T04:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T04:30:00+02:00',
        'price': 34150415.0,
        'start': '2025-10-15T04:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T04:45:00+02:00',
        'price': 34150430.0,
        'start': '2025-10-15T04:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T05:00:00+02:00',
        'price': 34150445.0,
        'start': '2025-10-15T04:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T05:15:00+02:00',
        'price': 34150500.0,
        'start': '2025-10-15T05:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T05:30:00+02:00',
        'price': 34150515.0,
        'start': '2025-10-15T05:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T05:45:00+02:00',
        'price': 34150530.0,
        'start': '2025-10-15T05:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T06:00:00+02:00',
        'price': 34150545.0,
        'start': '2025-10-15T05:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T06:15:00+02:00',
        'price': 34150600.0,
        'start': '2025-10-15T06:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T06:30:00+02:00',
        'price': 34150615.0,
        'start': '2025-10-15T06:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T06:45:00+02:00',
        'price': 34150630.0,
        'start': '2025-10-15T06:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T07:00:00+02:00',
        'price': 34150645.0,
        'start': '2025-10-15T06:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T07:15:00+02:00',
        'price': 34150700.0,
        'start': '2025-10-15T07:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T07:30:00+02:00',
        'price': 34150715.0,
        'start': '2025-10-15T07:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T07:45:00+02:00',
        'price': 34150730.0,
        'start': '2025-10-15T07:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T08:00:00+02:00',
        'price': 34150745.0,
        'start': '2025-10-15T07:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T08:15:00+02:00',
        'price': 34150800.0,
        'start': '2025-10-15T08:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T08:30:00+02:00',
        'price': 34150815.0,
        'start': '2025-10-15T08:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T08:45:00+02:00',
        'price': 34150830.0,
        'start': '2025-10-15T08:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T09:00:00+02:00',
        'price': 34150845.0,
        'start': '2025-10-15T08:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T09:15:00+02:00',
        'price': 34150900.0,
        'start': '2025-10-15T09:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T09:30:00+02:00',
        'price': 34150915.0,
        'start': '2025-10-15T09:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T09:45:00+02:00',
        'price': 34150930.0,
        'start': '2025-10-15T09:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T10:00:00+02:00',
        'price': 34150945.0,
        'start': '2025-10-15T09:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T10:15:00+02:00',
        'price': 34151000.0,
        'start': '2025-10-15T10:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T10:30:00+02:00',
        'price': 34151015.0,
        'start': '2025-10-15T10:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T10:45:00+02:00',
        'price': 34151030.0,
        'start': '2025-10-15T10:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T11:00:00+02:00',
        'price': 34151045.0,
        'start': '2025-10-15T10:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T11:15:00+02:00',
        'price': 34151100.0,
        'start': '2025-10-15T11:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T11:30:00+02:00',
        'price': 34151115.0,
        'start': '2025-10-15T11:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T11:45:00+02:00',
        'price': 34151130.0,
        'start': '2025-10-15T11:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T12:00:00+02:00',
        'price': 34151145.0,
        'start': '2025-10-15T11:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T12:15:00+02:00',
        'price': 34151200.0,
        'start': '2025-10-15T12:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T12:30:00+02:00',
        'price': 34151215.0,
        'start': '2025-10-15T12:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T12:45:00+02:00',
        'price': 34151230.0,
        'start': '2025-10-15T12:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T13:00:00+02:00',
        'price': 34151245.0,
        'start': '2025-10-15T12:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T13:15:00+02:00',
        'price': 34151300.0,
        'start': '2025-10-15T13:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T13:30:00+02:00',
        'price': 34151315.0,
        'start': '2025-10-15T13:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T13:45:00+02:00',
        'price': 34151330.0,
        'start': '2025-10-15T13:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T14:00:00+02:00',
        'price': 34151345.0,
        'start': '2025-10-15T13:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T14:15:00+02:00',
        'price': 34151400.0,
        'start': '2025-10-15T14:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T14:30:00+02:00',
        'price': 34151415.0,
        'start': '2025-10-15T14:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T14:45:00+02:00',
        'price': 34151430.0,
        'start': '2025-10-15T14:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T15:00:00+02:00',
        'price': 34151445.0,
        'start': '2025-10-15T14:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T15:15:00+02:00',
        'price': 34151500.0,
        'start': '2025-10-15T15:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T15:30:00+02:00',
        'price': 34151515.0,
        'start': '2025-10-15T15:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T15:45:00+02:00',
        'price': 34151530.0,
        'start': '2025-10-15T15:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T16:00:00+02:00',
        'price': 34151545.0,
        'start': '2025-10-15T15:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T16:15:00+02:00',
        'price': 34151600.0,
        'start': '2025-10-15T16:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T16:30:00+02:00',
        'price': 34151615.0,
        'start': '2025-10-15T16:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T16:45:00+02:00',
        'price': 34151630.0,
        'start': '2025-10-15T16:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T17:00:00+02:00',
        'price': 34151645.0,
        'start': '2025-10-15T16:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T17:15:00+02:00',
        'price': 34151700.0,
        'start': '2025-10-15T17:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T17:30:00+02:00',
        'price': 34151715.0,
        'start': '2025-10-15T17:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T17:45:00+02:00',
        'price': 34151730.0,
        'start': '2025-10-15T17:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T18:00:00+02:00',
        'price': 34151745.0,
        'start': '2025-10-15T17:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T18:15:00+02:00',
        'price': 34151800.0,
        'start': '2025-10-15T18:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T18:30:00+02:00',
        'price': 34151815.0,
        'start': '2025-10-15T18:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T18:45:00+02:00',
        'price': 34151830.0,
        'start': '2025-10-15T18:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T19:00:00+02:00',
        'price': 34151845.0,
        'start': '2025-10-15T18:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T19:15:00+02:00',
        'price': 34151900.0,
        'start': '2025-10-15T19:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T19:30:00+02:00',
        'price': 34151915.0,
        'start': '2025-10-15T19:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T19:45:00+02:00',
        'price': 34151930.0,
        'start': '2025-10-15T19:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T20:00:00+02:00',
        'price': 34151945.0,
        'start': '2025-10-15T19:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T20:15:00+02:00',
        'price': 34152000.0,
        'start': '2025-10-15T20:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T20:30:00+02:00',
        'price': 34152015.0,
        'start': '2025-10-15T20:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T20:45:00+02:00',
        'price': 34152030.0,
        'start': '2025-10-15T20:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T21:00:00+02:00',
        'price': 34152045.0,
        'start': '2025-10-15T20:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T21:15:00+02:00',
        'price': 34152100.0,
        'start': '2025-10-15T21:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T21:30:00+02:00',
        'price': 34152115.0,
        'start': '2025-10-15T21:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T21:45:00+02:00',
        'price': 34152130.0,
        'start': '2025-10-15T21:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T22:00:00+02:00',
        'price': 34152145.0,
        'start': '2025-10-15T21:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T22:15:00+02:00',
        'price': 34152200.0,
        'start': '2025-10-15T22:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T22:30:00+02:00',
        'price': 34152215.0,
        'start': '2025-10-15T22:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T22:45:00+02:00',
        'price': 34152230.0,
        'start': '2025-10-15T22:30:00+02:00',
      }),
      dict({
        'end': '2025-10-15T23:00:00+02:00',
        'price': 34152245.0,
        'start': '2025-10-15T22:45:00+02:00',
      }),
      dict({
        'end': '2025-10-15T23:15:00+02:00',
        'price': 34152300.0,
        'start': '2025-10-15T23:00:00+02:00',
      }),
      dict({
        'end': '2025-10-15T23:30:00+02:00',
        'price': 34152315.0,
        'start': '2025-10-15T23:15:00+02:00',
      }),
      dict({
        'end': '2025-10-15T23:45:00+02:00',
        'price': 34152330.0,
        'start': '2025-10-15T23:30:00+02:00',
      }),
      dict({
        'end': '2025-10-16T00:00:00+02:00',
        'price': 34152345.0,
        'start': '2025-10-15T23:45:00+02:00',
      }),
    ]),
  })
# ---
